Handling of bounds edits better built for undo/redo Can undo/redo, adding nodes, deleting nodes, moving things, adding and moving keyframes. Feeling pretty good.

--- a/ChristmasProject2021.vcxproj
+++ b/ChristmasProject2021.vcxproj
@@ -184,8 +184,12 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClCompile Include="src\tile_map.cpp" />
     <ClCompile Include="src\ui\animation_controller.cpp" />
     <ClCompile Include="src\ui\editor\actions\add_action.cpp" />
-    <ClCompile Include="src\ui\editor\actions\change_bounds_action.cpp" />
+    <ClCompile Include="src\ui\editor\actions\add_keyframe_action.cpp" />
+    <ClCompile Include="src\ui\editor\actions\change_keyframe_action.cpp" />
+    <ClCompile Include="src\ui\editor\actions\composite_action.cpp" />
     <ClCompile Include="src\ui\editor\actions\delete_action.cpp" />
+    <ClCompile Include="src\ui\editor\actions\delete_keyframe_action.cpp" />
+    <ClCompile Include="src\ui\editor\actions\move_keyframe_action.cpp" />
     <ClCompile Include="src\ui\editor\anchor_bounds_handle.cpp" />
     <ClCompile Include="src\ui\editor\animation_widget.cpp" />
     <ClCompile Include="src\ui\editor\bounds_handle.cpp" />
@@ -259,9 +263,13 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClInclude Include="src\tile_map.h" />
     <ClInclude Include="src\ui\animation_controller.h" />
     <ClInclude Include="src\ui\editor\actions\add_action.h" />
-    <ClInclude Include="src\ui\editor\actions\change_bounds_action.h" />
+    <ClInclude Include="src\ui\editor\actions\add_keyframe_action.h" />
+    <ClInclude Include="src\ui\editor\actions\change_keyframe_action.h" />
+    <ClInclude Include="src\ui\editor\actions\composite_action.h" />
     <ClInclude Include="src\ui\editor\actions\delete_action.h" />
+    <ClInclude Include="src\ui\editor\actions\delete_keyframe_action.h" />
     <ClInclude Include="src\ui\editor\actions\editor_action.h" />
+    <ClInclude Include="src\ui\editor\actions\move_keyframe_action.h" />
     <ClInclude Include="src\ui\editor\anchor_bounds_handle.h" />
     <ClInclude Include="src\ui\editor\animation_widget.h" />
     <ClInclude Include="src\ui\editor\bounds_handle.h" />
