--- a/ChristmasProject2021.vcxproj
+++ b/ChristmasProject2021.vcxproj
@@ -196,6 +196,7 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClCompile Include="src\ui\editor\bounds_widget.cpp" />
     <ClCompile Include="src\ui\editor\editor_layer.cpp" />
     <ClCompile Include="src\ui\editor\im_animation_tracks.cpp" />
+    <ClCompile Include="src\ui\editor\keyframe_widget.cpp" />
     <ClCompile Include="src\ui\editor\offset_bounds_handle.cpp" />
     <ClCompile Include="src\ui\group.cpp" />
     <ClCompile Include="src\ui\layouts\animation_clip.cpp" />
@@ -276,7 +277,10 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClInclude Include="src\ui\editor\bounds_widget.h" />
     <ClInclude Include="src\ui\editor\editor_layer.h" />
     <ClInclude Include="src\ui\editor\im_animation_tracks.h" />
+    <ClInclude Include="src\ui\editor\keyframe_context.h" />
+    <ClInclude Include="src\ui\editor\keyframe_widget.h" />
     <ClInclude Include="src\ui\editor\offset_bounds_handle.h" />
+    <ClInclude Include="src\ui\editor\utils.h" />
     <ClInclude Include="src\ui\group.h" />
     <ClInclude Include="src\ui\inspectors.h" />
     <ClInclude Include="src\ui\layouts\animation_clip.h" />
