--- a/ChristmasProject2021.vcxproj.filters
+++ b/ChristmasProject2021.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClCompile Include="src\ui\editor\actions\change_keyframe_action.cpp">
       <Filter>ui\editor\actions</Filter>
     </ClCompile>
+    <ClCompile Include="src\ui\editor\keyframe_widget.cpp">
+      <Filter>ui\editor</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ecs">
@@ -450,6 +453,15 @@
     </ClInclude>
     <ClInclude Include="src\ui\editor\actions\change_keyframe_action.h">
       <Filter>ui\editor\actions</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ui\editor\keyframe_widget.h">
+      <Filter>ui\editor</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ui\editor\keyframe_context.h">
+      <Filter>ui\editor</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ui\editor\utils.h">
+      <Filter>ui\editor</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
