--- a/ChristmasProject2021.vcxproj
+++ b/ChristmasProject2021.vcxproj
@@ -47,7 +47,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SDL_PATH)\include;$(SDL_IMAGE_PATH)\include;$(SDL_TTF_PATH)\include;$(SDL_MIXER_PATH)\include;external\imgui;external\entt\single_include;external\spdlog\include;external\json\single_include;external\glm;external\imgui-filebrowser;external\ImGuizmo;external\magic_enum\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SDL_PATH)\include;$(SDL_IMAGE_PATH)\include;$(SDL_TTF_PATH)\include;$(SDL_MIXER_PATH)\include;external\imgui;external\entt\single_include;external\spdlog\include;external\json\single_include;external\glm;external\imgui-filebrowser;external\ImGuizmo;external\magic_enum\include;external\range-v3\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SDL_PATH)\lib\x64;$(SDL_IMAGE_PATH)\lib\x64;$(SDL_TTF_PATH)\lib\x64;$(SDL_MIXER_PATH)\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -237,6 +237,7 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClInclude Include="src\ecs\systems\velocity_system.h" />
     <ClInclude Include="src\ecs\systems\weapon_system.h" />
     <ClInclude Include="src\events\event.h" />
+    <ClInclude Include="src\events\event_animation.h" />
     <ClInclude Include="src\events\event_dispatch.h" />
     <ClInclude Include="src\events\event_key.h" />
     <ClInclude Include="src\events\event_listener.h" />
