--- a/ChristmasProject2021.vcxproj.filters
+++ b/ChristmasProject2021.vcxproj.filters
@@ -481,6 +481,7 @@
     <ClInclude Include="src\events\event_animation.h">
       <Filter>events</Filter>
     </ClInclude>
+    <ClInclude Include="src\vec2.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="TODO.txt" />
