--- a/ChristmasProject2021.vcxproj
+++ b/ChristmasProject2021.vcxproj
@@ -47,7 +47,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SDL_PATH)\include;$(SDL_IMAGE_PATH)\include;$(SDL_TTF_PATH)\include;$(SDL_MIXER_PATH)\include;$(MOTHUI_PATH)\include;external\imgui;external\entt\single_include;external\spdlog\include;external\json\single_include;external\glm;external\imgui-filebrowser;external\ImGuizmo;external\magic_enum\include;external\range-v3\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SDL_PATH)\include;$(SDL_IMAGE_PATH)\include;$(SDL_TTF_PATH)\include;$(SDL_MIXER_PATH)\include;$(MOTHUI_PATH)\include;external\imgui;external\entt\single_include;external\spdlog\include;external\json\single_include;external\glm;external\imgui-filebrowser;external\ImGuizmo;external\magic_enum\include;external\range-v3\include;external\moth_ui\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SDL_PATH)\lib\x64;$(SDL_IMAGE_PATH)\lib\x64;$(SDL_TTF_PATH)\lib\x64;$(SDL_MIXER_PATH)\lib\x64;$(MOTHUI_PATH)\lib\win\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -152,8 +152,9 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClCompile Include="src\ecs\systems\sprite_system.cpp" />
     <ClCompile Include="src\ecs\systems\velocity_system.cpp" />
     <ClCompile Include="src\ecs\systems\weapon_system.cpp" />
-    <ClCompile Include="src\events\event.cpp" />
-    <ClCompile Include="src\events\event_key.cpp" />
+    <ClCompile Include="src\event_factory.cpp" />
+    <ClCompile Include="src\font.cpp" />
+    <ClCompile Include="src\font_factory.cpp" />
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\game_pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -163,12 +164,14 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClCompile Include="src\image_factory.cpp" />
     <ClCompile Include="src\layers\background_layer.cpp" />
     <ClCompile Include="src\layers\game_layer.cpp" />
+    <ClCompile Include="src\layers\game_over_layer.cpp" />
     <ClCompile Include="src\layers\layer.cpp" />
     <ClCompile Include="src\layers\layer_stack.cpp" />
     <ClCompile Include="src\layers\loading_layer.cpp" />
     <ClCompile Include="src\layers\menu_layer.cpp" />
     <ClCompile Include="src\layers\splash_layer.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\ui_node_factory.cpp" />
     <ClCompile Include="src\SDL_FontCache.c">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <WarningLevel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">TurnOffAllWarnings</WarningLevel>
@@ -186,8 +189,9 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClCompile Include="src\states\state_post_game.cpp" />
     <ClCompile Include="src\states\state_pre_game.cpp" />
     <ClCompile Include="src\tile_map.cpp" />
+    <ClCompile Include="src\ui\ui_button.cpp" />
+    <ClCompile Include="src\ui\ui_main_menu.cpp" />
     <ClCompile Include="src\ui_renderer.cpp" />
-    <ClCompile Include="src\ui_utils.cpp" />
     <ClCompile Include="src\utils.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -216,24 +220,23 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClInclude Include="src\ecs\systems\velocity_system.h" />
     <ClInclude Include="src\ecs\systems\weapon_system.h" />
     <ClInclude Include="src\events\event.h" />
-    <ClInclude Include="src\events\event_dispatch.h" />
-    <ClInclude Include="src\events\event_key.h" />
-    <ClInclude Include="src\events\event_listener.h" />
-    <ClInclude Include="src\events\event_mouse.h" />
-    <ClInclude Include="src\events\event_quit.h" />
-    <ClInclude Include="src\events\event_device.h" />
-    <ClInclude Include="src\events\event_window_size.h" />
+    <ClInclude Include="src\event_factory.h" />
+    <ClInclude Include="src\font.h" />
+    <ClInclude Include="src\font_factory.h" />
     <ClInclude Include="src\game.h" />
     <ClInclude Include="src\game_pch.h" />
     <ClInclude Include="src\image.h" />
     <ClInclude Include="src\image_factory.h" />
     <ClInclude Include="src\layers\background_layer.h" />
     <ClInclude Include="src\layers\game_layer.h" />
+    <ClInclude Include="src\layers\game_over_layer.h" />
     <ClInclude Include="src\layers\layer.h" />
     <ClInclude Include="src\layers\layer_stack.h" />
     <ClInclude Include="src\layers\loading_layer.h" />
     <ClInclude Include="src\layers\menu_layer.h" />
     <ClInclude Include="src\layers\splash_layer.h" />
+    <ClInclude Include="src\ui\ui_common.h" />
+    <ClInclude Include="src\ui_node_factory.h" />
     <ClInclude Include="src\random.h" />
     <ClInclude Include="src\SDL_FontCache.h" />
     <ClInclude Include="src\simplex_noise.h" />
@@ -244,8 +247,9 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClInclude Include="src\states\state_post_game.h" />
     <ClInclude Include="src\states\state_pre_game.h" />
     <ClInclude Include="src\tile_map.h" />
+    <ClInclude Include="src\ui\ui_button.h" />
+    <ClInclude Include="src\ui\ui_main_menu.h" />
     <ClInclude Include="src\ui_renderer.h" />
-    <ClInclude Include="src\ui_utils.h" />
     <ClInclude Include="src\utils.h" />
     <ClInclude Include="src\vec2.h" />
   </ItemGroup>
